<resources>
    <string name="app_name">NoiseAtlas</string>
    <string name="get_location">Get Location</string>
    <string name="placeholder">placeholder</string>
    <string name="show_longitude">Longitude</string>
    <string name="show_latitude">Latitude</string>
    <string name="show_altitude">Altitude</string>
    <string name="show_accuracy">Accuracy</string>
    <string name="show_time">Time</string>
    <string name="get_sound">Get Sound Data</string>
    <string name="helloworld">Hello World</string>
</resources>
