<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="azrhei.net.noiseatlas.Activity.LocationTestingActivity"
    android:orientation="vertical">

    <Button
        android:id="@+id/btn_get_location_test"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/get_location" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/show_longitude" />

        <TextView
            android:id="@+id/tv_show_test_longitude"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/placeholder" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/show_latitude" />

        <TextView
            android:id="@+id/tv_show_test_latitude"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/placeholder" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/show_altitude" />

        <TextView
            android:id="@+id/tv_show_test_altitude"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/placeholder" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/show_accuracy" />

        <TextView
            android:id="@+id/tv_show_test_accuracy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/placeholder" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/show_time" />

        <TextView
            android:id="@+id/tv_show_test_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/placeholder" />
    </LinearLayout>
</LinearLayout>
